--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,86 @@
   margin: auto;
   overflow: hidden;
 }
+.upper-row {
+  padding-top: 4em;
+  padding-bottom: 2em;
+}
+
+.lower-row {
+  padding-top: 2em;
+  padding-bottom: 4em;
+}
+
+.ffod {
+  color: #F15A29;
+}
+
+.nav-foods {
+  background-color: white;
+}
+
+.tabs-nav {
+  padding-top: 9em;
+  padding-bottom: 9em;
+}
+
+html, body {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+}
+
+.header-text {
+  margin: auto;
+  color: white;
+  width: 75%;
+  text-align: center;
+  font-size: 20px;
+}
+
+.nav-bar {
+  width: 100%;
+  height: 200px;
+  display: inline;
+}
+
+.nav-item {
+  width: 25%;
+  float: left;
+}
+
+.bg-food {
+  padding-top: 4em;
+  padding-bottom: 4em;
+  text-align: center;
+}
+
+#nav-1st {
+  background-color: white;
+  width: 100%;
+  height: 100px;
+}
+
+#nav-2nd {
+  background-color: `#F15A29;
+  width: 100%;
+  height: 20vh;
+}
+
+#Happyhour {
+  background-color: #ebedef;
+ padding: 20%;
+ padding-bottom: 12%;
+ box-sizing: border-box;
+ text-align: center;
+}
+
+#PartyTime {
+  font-family: sans-serif;
+  color: white;
+  background-color: #F15A29;
+  padding: 20%;
+  padding-bottom: 9%;
+  box-sizing: border-box;
+  text-align: center;
+}
