--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,50 @@ html, body {
   box-sizing: border-box;
   text-align: center;
 }
+
+#nav2 {
+  background: url("../images/foodtop/breakfast.jpg");
+  background-size: cover;
+  text-align: center;
+    padding-top: 3%;
+    padding-bottom: 4%;
+    font-style: italic;
+    font-family: serif;
+}
+
+#nav3 {
+  background: url("../images/foodtop/lunch.jpg");
+  background-size: cover;
+  text-align: center;
+    padding-top: 3%;
+    padding-bottom: 4%;
+    font-style: italic;
+    font-family: serif;
+}
+
+#nav4 {
+  background: url("../images/foodtop/dinner.jpg");
+  background-size: cover;
+  text-align: center;
+    padding-top: 3%;
+    padding-bottom: 4%;
+    font-style: italic;
+    font-family: serif;
+}
+
+#nav3:hover:focus #nav4:hover:focus {
+  color: #f1f1f1;
+}
+
+.navtext {
+  font-weight: 400px;
+  font-style: italic;
+
+  font-size: 3rem;
+  text-align: center;
+  margin: auto;
+  color: white;
+  width: 30vw;
+  margin-top: 100px;
+  height: auto;
+}
