--- a/css/styles.css
+++ b/css/styles.css
@@ -158,3 +158,143 @@ html, body {
   margin-top: 100px;
   height: auto;
 }
+
+.content {
+  width: 100%;
+  background-color: white;
+}
+
+.content-wrapper {
+  width: 70%;
+  height: 1000px;
+  background-color: white;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.content-items {
+  background-color: transparent;
+  float: left;
+  height: 40%;
+  width: 50%;
+}
+
+#1stimg {
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  margin: auto;
+  margin-top: 20px;
+  position: relative;
+  box-shadow: 1px 0px 6px 5px rgba(87, 84, 87, 0.63);
+}
+
+#top-img {
+  width: 100%;
+  height: 50%;
+}
+#bottom-img {
+  width: 100%;
+  height: 50%;
+}
+#imgtop, #imgbottom {
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: white;
+  box-shadow: 1px 2px 3px 3px #DCDCDC;
+  border-radius: 0%;
+  padding: 3%;
+}
+#container-text {
+  width: 70%;
+  padding-left: 5%;
+}
+
+#container-text2 {
+  width: 70%;
+  padding-right: 5%;
+  text-align: right;
+  float: right;
+}
+
+.endarrow{
+  width: 4%;
+  height:270px;
+  float: left;
+}
+.btn-submit {
+  font-weight: 700;
+  background: white;
+  z-index: 3;
+  color: #F15A29;
+  font-size: 14px;
+  border-color: #F15A29;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 2px;
+  padding: 10px 40px;
+  transition: all 0.2s linear;
+  text-transform: capitalize;
+}
+
+
+
+#height-img {
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+#height-img2 {
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+#img1  {
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: white;
+  box-shadow: 1px 2px 3px 3px #DCDCDC;
+  border-radius: 0%;
+  padding-top: 7%;
+  padding-bottom: 7%;
+  padding-left: 7%;
+}
+#img2{
+  width: 100%;
+height: 100%;
+color: white;
+background-color: white;
+box-shadow: 1px 2px 3px 3px #DCDCDC;
+border-radius: 0%;
+padding-top: 7%;
+padding-bottom: 7%;
+padding-right: 7%;
+}
+
+#4th-img {
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  margin: auto;
+  margin-top: 30px;
+  position: relative;
+  box-shadow: 1px 0px 6px 5px rgba(87, 84, 87, 0.63);
+}
+
+#4th-imgwrapper, #1stimgwrapper {
+  position: absolute;
+  width: 350px;
+  height: 250px;
+  margin: 25px;
+  background-color: blue;
+}
+
+.content-wrapper2 {
+  width: 100%;
+  height: 400px;
+  background: url(../images/foodsBg.jpg);
+}
