--- a/css/styles.css
+++ b/css/styles.css
@@ -298,3 +298,177 @@ padding-right: 7%;
   height: 400px;
   background: url(../images/foodsBg.jpg);
 }
+
+.bottomcontent {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  margin-top: 20px;
+  background-color: white;
+  position: relative;
+}
+
+.navbtn {
+  width: 25%;
+  height: 50px;
+  padding: 0;
+  margin: 0;
+  float: left;
+  background-color: lightgrey;
+  border: none;
+  border-right: solid 1px grey;
+}
+
+#btn1 {
+  background-color: white;
+}
+
+.
+#imagebottom1 {
+  background: url("../images/chickenBurger.jpg");
+}
+
+#imagebottom2 {
+  background: url("../images/beefBurger.jpg");
+}
+
+#imagebottom3 {
+  background: url("../images/chickenPizza.jpg");
+}
+.text4image{
+  margin: auto;
+  width: 90%;
+  height: 10%;
+}
+
+#fastfood {
+  display: inline;
+}
+.orange-text {
+  color: #F15A29;
+}
+
+.bottomtestimonial {
+  width: 100%;
+  height: 400px;
+  background-color: white;
+  position: relative;
+}
+
+.customers {
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+.sec-subscribe {
+  background-image: url("../images/backgrounds/subscribe.jpg");
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+.testimonial {
+  width: 80%;
+  height: 250px;
+  background-color: white;
+  margin: auto;
+  margin-top: 20px;
+  box-shadow: 1px 0px 6px 5px rgba(87, 84, 87, 0.63);
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+.bottomwraper {
+  width: 100%;
+  position: absolute;
+}
+
+.prev {
+  font-weight: bolder;
+  color: orange;
+  margin-bottom: 10px;
+}
+
+.testimonialleft {
+  float: left;
+  width: 60%;
+}
+
+.testimonialright {
+  float: left;
+  width: 30%;
+}
+
+.leftcontent {
+  width: 400px;
+  margin: auto;
+  text-align: center;
+  border-right: solid 1px grey;
+  height: 200px;
+}
+
+#imageicon {
+  float: left;
+  text-align: center;
+  margin-left: 60px
+}
+
+.rightcontent {
+  width: 250px;
+  margin: auto;
+  text-align: center;
+  height: 250px;
+}
+
+.bottomtestimonial2 {
+  width: 100%;
+  height: 200px;
+  background: url(../images/subscribe.jpg);
+}
+
+.bottomtestimonial3 {
+  width: 100%;
+  height: 200px;
+  background-color: #F15A29;
+  position: absolute;
+}
+
+.contact {
+  color: white;
+  text-align: center;
+  padding-top: 8em;
+  padding-bottom: 8em;
+}
+
+#subscribe {
+  font-weight: 700;
+  background: #F15A29;
+  color: white;
+  font-size: 14px;
+  border-radius: 2px;
+  border: none;
+  padding: 8px 40px;
+  transition: all 0.2s linear;
+}
+
+#inputfield {
+  background-color: white;
+  width: 200px;
+  opacity: 0.7;
+  border: none;
+  padding: 8px;
+  margin-right: 10px;
+  border-radius: 2px;
+}
+
+.footercontent {
+  padding-top: 2em;
+  text-align: center;
+  margin: auto;
+  color: white;
+}
+
+#footerimg {
+  float: left;
+}
