--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,62 @@
+
+.overlay-screen {
+  position: absolute;
+  top: -100%;
+  width: 100%;
+  height: 100%;
+  background: #F15A29;
+  transition: .5s;
+}
+
+.overlay-screen.active {
+  top: 0;
+  overflow: auto;
+}
+
+a .first-bars {
+  position: absolute;
+  padding: 5% 0% 0% 5%;
+  text-decoration: none;
+  color: white;
+  font-size: 3em;
+  cursor: pointer;
+  z-index: 1;
+}
+
+a .first-bars:hover {
+  color: black;
+}
+
+.first-bars:active {
+  text-decoration: none;
+  color: black;
+}
+
+.overlay-menu li, .overlay-menu a {
+  color: black;
+  font-family: 'Scope One', serif;
+  text-align: center;
+  font-size: 2em;
+  list-style: none;
+
+}
+
+.overlay-menu ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay-menu ul li a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.overlay-menu ul li a:focus {
+  text-decoration: none;
+  color: white;
+}
 #wrapper {
   margin: 0px;
   padding: 0px;
@@ -28,6 +87,7 @@
   margin: auto;
   overflow: hidden;
 }
+
 .upper-row {
   padding-top: 4em;
   padding-bottom: 2em;
@@ -44,6 +104,7 @@
 
 .nav-foods {
   background-color: white;
+
 }
 
 .tabs-nav {
@@ -96,10 +157,10 @@ html, body {
 
 #Happyhour {
   background-color: #ebedef;
- padding: 20%;
- padding-bottom: 12%;
- box-sizing: border-box;
- text-align: center;
+  padding: 20%;
+  padding-bottom: 12%;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 #PartyTime {
@@ -116,40 +177,56 @@ html, body {
   background: url("../images/foodtop/breakfast.jpg");
   background-size: cover;
   text-align: center;
-    padding-top: 3%;
-    padding-bottom: 4%;
-    font-style: italic;
-    font-family: serif;
+  padding-top: 3%;
+  padding-bottom: 4%;
+  font-style: italic;
+  font-family: serif;
 }
 
 #nav3 {
   background: url("../images/foodtop/lunch.jpg");
   background-size: cover;
   text-align: center;
-    padding-top: 3%;
-    padding-bottom: 4%;
-    font-style: italic;
-    font-family: serif;
+  padding-top: 3%;
+  padding-bottom: 4%;
+  font-style: italic;
+  font-family: serif;
 }
 
 #nav4 {
   background: url("../images/foodtop/dinner.jpg");
   background-size: cover;
   text-align: center;
-    padding-top: 3%;
-    padding-bottom: 4%;
-    font-style: italic;
-    font-family: serif;
+  padding-top: 3%;
+  padding-bottom: 4%;
+  font-style: italic;
+  font-family: serif;
 }
 
-#nav3:hover:focus #nav4:hover:focus {
-  color: #f1f1f1;
+#nav2 :hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: white;
+  padding: 25.5% 32.5% 25.5%;
+  transition: .5s;
+}
+
+#nav3 :hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: white;
+  padding: 25.5% 32.5% 25.5%;
+  transition: .5s;
+}
+
+#nav4 :hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: white;
+  padding: 25.5% 32.5% 25.5%;
+  transition: .5s;
 }
 
 .navtext {
   font-weight: 400px;
   font-style: italic;
-
   font-size: 3rem;
   text-align: center;
   margin: auto;
@@ -193,10 +270,12 @@ html, body {
   width: 100%;
   height: 50%;
 }
+
 #bottom-img {
   width: 100%;
   height: 50%;
 }
+
 #imgtop, #imgbottom {
   width: 100%;
   height: 100%;
@@ -206,6 +285,7 @@ html, body {
   border-radius: 0%;
   padding: 3%;
 }
+
 #container-text {
   width: 70%;
   padding-left: 5%;
@@ -218,11 +298,12 @@ html, body {
   float: right;
 }
 
-.endarrow{
+.endarrow {
   width: 4%;
-  height:270px;
+  height: 270px;
   float: left;
 }
+
 .btn-submit {
   font-weight: 700;
   background: white;
@@ -238,8 +319,6 @@ html, body {
   text-transform: capitalize;
 }
 
-
-
 #height-img {
   float: left;
   width: 50%;
@@ -252,7 +331,7 @@ html, body {
   height: 100%;
 }
 
-#img1  {
+#img1 {
   width: 100%;
   height: 100%;
   color: white;
@@ -263,16 +342,17 @@ html, body {
   padding-bottom: 7%;
   padding-left: 7%;
 }
-#img2{
+
+#img2 {
   width: 100%;
-height: 100%;
-color: white;
-background-color: white;
-box-shadow: 1px 2px 3px 3px #DCDCDC;
-border-radius: 0%;
-padding-top: 7%;
-padding-bottom: 7%;
-padding-right: 7%;
+  height: 100%;
+  color: white;
+  background-color: white;
+  box-shadow: 1px 2px 3px 3px #DCDCDC;
+  border-radius: 0%;
+  padding-top: 7%;
+  padding-bottom: 7%;
+  padding-right: 7%;
 }
 
 #4th-img {
@@ -320,11 +400,10 @@ padding-right: 7%;
 }
 
 #btn1 {
-  background-color: white;
+  background-color: lightgrey;
 }
 
-.
-#imagebottom1 {
+. #imagebottom1 {
   background: url("../images/chickenBurger.jpg");
 }
 
@@ -335,15 +414,21 @@ padding-right: 7%;
 #imagebottom3 {
   background: url("../images/chickenPizza.jpg");
 }
-.text4image{
+
+.text4image {
   margin: auto;
   width: 90%;
   height: 10%;
+  display:inline-flex ;
+  text-align: center;
+  float: right;
+  color: orange;
 }
 
 #fastfood {
   display: inline;
 }
+
 .orange-text {
   color: #F15A29;
 }
@@ -471,4 +556,7 @@ padding-right: 7%;
 
 #footerimg {
   float: left;
+}
+.fa{
+  color: white;
 }
