--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
-
+#menubar{
+  margin-top: 0;
+}
 .overlay-screen {
   position: absolute;
   top: -100%;
   width: 100%;
   height: 100%;
+  z-index: 1;
   background: #F15A29;
   transition: .5s;
 }
@@ -14,13 +17,12 @@
 }
 
 a .first-bars {
-  position: absolute;
-  padding: 5% 0% 0% 5%;
   text-decoration: none;
   color: white;
   font-size: 3em;
   cursor: pointer;
-  z-index: 1;
+  z-index: 3;
+  padding: 2em;
 }
 
 a .first-bars:hover {
@@ -40,7 +42,14 @@ a .first-bars:hover {
   list-style: none;
 
 }
-
+a.close{
+  position: absolute;
+  top: 0.2em;
+  right: 0.5em;
+  font-size: 90px;
+  text-decoration: none;
+  color: black;
+}
 .overlay-menu ul {
   position: absolute;
   top: 50%;
@@ -65,8 +74,8 @@ a .first-bars:hover {
 }
 
 .header {
-  padding-top: 15em;
-  padding-bottom: 20em;
+  padding-top: 2em;
+  padding-bottom: 30em;
   background-image: url("../images/backgrounds/landing.jpg");
   background-size: cover;
   background-attachment: fixed;
@@ -111,6 +120,9 @@ a .first-bars:hover {
   padding-top: 9em;
   padding-bottom: 9em;
 }
+p{
+  margin: 0;
+}
 
 html, body {
   margin: 0px;
@@ -141,44 +153,42 @@ html, body {
   padding-top: 4em;
   padding-bottom: 4em;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 #nav-1st {
   background-color: white;
-  width: 100%;
-  height: 100px;
 }
 
-#nav-2nd {
-  background-color: `#F15A29;
-  width: 100%;
-  height: 20vh;
+#nav-2nd{
+  background-color: #F15A29;
 }
 
 #Happyhour {
   background-color: #ebedef;
-  padding: 20%;
-  padding-bottom: 12%;
   box-sizing: border-box;
   text-align: center;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
 
 #PartyTime {
   font-family: sans-serif;
   color: white;
   background-color: #F15A29;
-  padding: 20%;
-  padding-bottom: 9%;
   box-sizing: border-box;
   text-align: center;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
 
 #nav2 {
   background: url("../images/foodtop/breakfast.jpg");
   background-size: cover;
   text-align: center;
-  padding-top: 3%;
-  padding-bottom: 4%;
+  padding-top: 6%;
+  padding-bottom: 6%;
   font-style: italic;
   font-family: serif;
 }
@@ -187,8 +197,8 @@ html, body {
   background: url("../images/foodtop/lunch.jpg");
   background-size: cover;
   text-align: center;
-  padding-top: 3%;
-  padding-bottom: 4%;
+  padding-top: 6%;
+  padding-bottom: 6%;
   font-style: italic;
   font-family: serif;
 }
@@ -197,42 +207,37 @@ html, body {
   background: url("../images/foodtop/dinner.jpg");
   background-size: cover;
   text-align: center;
-  padding-top: 3%;
-  padding-bottom: 4%;
+  padding-top: 6%;
+  padding-bottom: 6%;
   font-style: italic;
   font-family: serif;
 }
 
-#nav2 :hover {
-  background: rgba(255, 255, 255, 0.3);
+#nav2:hover {
   color: white;
-  padding: 25.5% 32.5% 25.5%;
+  opacity: 0.4;
   transition: .5s;
 }
 
-#nav3 :hover {
-  background: rgba(255, 255, 255, 0.3);
+#nav3:hover {
   color: white;
-  padding: 25.5% 32.5% 25.5%;
+  opacity: 0.4;
   transition: .5s;
 }
 
-#nav4 :hover {
-  background: rgba(255, 255, 255, 0.3);
+#nav4:hover {
   color: white;
-  padding: 25.5% 32.5% 25.5%;
+  opacity: 0.4;
   transition: .5s;
 }
 
 .navtext {
   font-weight: 400px;
   font-style: italic;
-  font-size: 3rem;
+  font-size: 2em;
   text-align: center;
   margin: auto;
   color: white;
-  width: 30vw;
-  margin-top: 100px;
   height: auto;
 }
 
@@ -318,7 +323,10 @@ html, body {
   transition: all 0.2s linear;
   text-transform: capitalize;
 }
-
+.btn-submit i{
+  color: #F15A29;
+  width: 3em;
+}
 #height-img {
   float: left;
   width: 50%;
@@ -402,8 +410,7 @@ html, body {
 #btn1 {
   background-color: lightgrey;
 }
-
-. #imagebottom1 {
+#imagebottom1 {
   background: url("../images/chickenBurger.jpg");
 }
 
@@ -415,16 +422,16 @@ html, body {
   background: url("../images/chickenPizza.jpg");
 }
 
-.text4image {
-  margin: auto;
-  width: 90%;
-  height: 10%;
-  display:inline-flex ;
-  text-align: center;
-  float: right;
-  color: orange;
+.col-md-4{
+  width:auto;
 }
-
+.text4image {
+  text-align: center;
+  color:#F15A29;
+}
+.bg-food .fa{
+  color:#F15A29;
+}
 #fastfood {
   display: inline;
 }
@@ -432,7 +439,9 @@ html, body {
 .orange-text {
   color: #F15A29;
 }
-
+.leftcontent .fa{
+  color: #F15A29;
+}
 .bottomtestimonial {
   width: 100%;
   height: 400px;
@@ -447,6 +456,7 @@ html, body {
 
 .sec-subscribe {
   background-image: url("../images/backgrounds/subscribe.jpg");
+  background-size: cover;
 }
 
 .container-fluid {
@@ -454,7 +464,7 @@ html, body {
 }
 
 .testimonial {
-  width: 80%;
+  width: 100%;
   height: 250px;
   background-color: white;
   margin: auto;
@@ -489,8 +499,8 @@ html, body {
   width: 400px;
   margin: auto;
   text-align: center;
-  border-right: solid 1px grey;
-  height: 200px;
+  border-right: solid 1px rgba(128, 128, 128, 0.671);
+  padding-right: 3em;
 }
 
 #imageicon {
@@ -510,6 +520,7 @@ html, body {
   width: 100%;
   height: 200px;
   background: url(../images/subscribe.jpg);
+  background-size: cover;
 }
 
 .bottomtestimonial3 {
