--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,31 @@ a.close{
 p{
   margin: 0;
 }
-
+.modal-dialog{
+  height: 30em;
+  width: 70em;
+  background-color: white;
+  text-align: justify;
+  background-image: url("../images/backgrounds/landing.jpg");
+  color: white;
+}
+#nav-1st {
+  padding-top: 3em;
+  padding-bottom: 3em;
+  text-align: center;
+  background-color: lightgrey;
+}
+#nav-2nd {
+  padding-top: 3em;
+  padding-bottom: 3em;
+  text-align: center;
+}
+#nav-1st a{
+  color: black;
+}
+#nav-2nd a{
+  color: white;
+}
 html, body {
   margin: 0px;
   padding: 0px;
@@ -157,9 +181,6 @@ html, body {
   justify-content: center;
 }
 
-#nav-1st {
-  background-color: white;
-}
 
 #nav-2nd{
   background-color: #F15A29;
